@@ -13,7 +13,7 @@
 # livecd-functions.sh should _ONLY_ set this differently if CDBOOT is
 # set, else the default one should be used for normal boots.
 # say:  RC_NO_UMOUNTS="/mnt/livecd|/newroot"
-RC_NO_UMOUNTS=${RC_NO_UMOUNTS:-^(/|/dev|/dev/pts|/lib/rcscripts/init.d|/proc)$}
+RC_NO_UMOUNTS=${RC_NO_UMOUNTS:-^(/|/dev|/dev/pts|/lib/rcscripts/init.d|/proc|/proc/.*|/sys)$}
 
 # Reset pam_console permissions if we are actually using it
 if [[ -x /sbin/pam_console_apply && ! -c /dev/.devfsd && \
