@@ -360,10 +360,15 @@ ifconfig_post_start() {
 		# Work out if we're a host or a net if not told
 		if [[ " ${x} " != *" -net "* && " ${x} " != *" -host "* ]] ; then
 			y="${x%% *}"
-			if [[ ${y} == *.*.*.* && ${y} != *.*.*.0 && ${y} != *.*.*.0/* ]] ; then
-				x="-host ${x}"
-			else
+			if [[ ${x} == *" netmask "* ]] ; then
 				x="-net ${x}"
+			elif [[ ${y} == *.*.*.*/32 ]] ; then
+				x="-host ${x}"
+			elif [[ ${y} == *.*.*.*/* ]] ; then
+				x="-net ${x}"
+			else
+				# Given the lack of a netmask, we assume a host
+				x="-host ${x}"
 			fi
 		fi
 
